syntax = "proto3";

import "google/protobuf/empty.proto";

package pb;

option go_package = "./pb";

service Order {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc UpdateOrderStatus(UpdateOrderRequest) returns (google.protobuf.Empty) {}
}

message CreateOrderRequest {
  CreateOrderRequestData order = 1;
  CreateOrderClient client = 2;
  CreateOrderRestaurant restaurant = 3;
  repeated CreateOrderFoods foods = 4;
}

message CreateOrderFoods {
  string food_id = 1;
  string food_name = 2;
  float price = 3;
  int32 quantity = 4;
}

message CreateOrderClient {
  string client_id = 1;
  string client_name = 2;
}

message CreateOrderRestaurant {
  string restaurant_id = 1;
  string restaurant_name = 2;
  string restaurant_is_open = 3;
  string restaurant_owner_id = 4;
}

message CreateOrderRequestData {
  string order_id = 1;
  string client_id = 2;
  string restaurant_id = 3;
  string state = 4;
}

message CreateOrderResponse {
  string order_id = 1;
}

message UpdateOrderRequest {
  string order_id = 1;
  string state = 2;
}
